[package]
name = "feishu-nanobot"
version = "0.1.0"
edition = "2024"

[dependencies]
feishu-sdk = { version = "0.1.2", features = ["websocket"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
